<resources>
    <string name="app_name">twoyi</string>
    <string name="booting_tips">Booting twoyi…</string>
    <string name="extracting_tips">twoyi is initializing…</string>
    <string name="first_boot_tips">The first boot is a little slow, please wait…</string>
    <string name="first_boot_tips2">The initialization is normal, please be patient:)</string>
    <string name="first_boot_tips3">Initialization is about to complete, please wait…</string>
    <string name="boot_failed">Twoyi boot timeout!</string>
    <string name="about_btn">About</string>
    <string name="copy_right" translatable="false">Copyright © %1$d</string>
    <string name="help_text">Help</string>
    <string name="check_update">Check update</string>
    <string name="about_follow_gongzhonghao">Follow WeChat Public Account</string>
    <string name="wechat_public_account_tips">The number has copied to clipboard, please search and follow it.</string>
    <string name="about_author">Author: weishu (Contact me)</string>
    <string name="about_page_website">Official website</string>
    <string name="privacy">Privacy</string>
    <string name="about_feedback_qq_title">QQ Group (Click to join)</string>
    <string name="about_author_github" translatable="false">Github(tiann)</string>
    <string name="about_author_zhihu">Zhihu(weishu)</string>
    <string name="about_author_xda" translatable="false">XDA(weishu)</string>
    <string name="about_author_coolapk">Coolapk(weishu)</string>
    <string name="about_author_email">Email me</string>
    <string name="about_author_contact">Contact me</string>
    <string name="about_telegram_group">Telegram group</string>
    <string name="i_know_it">I know it</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="donate_alipay">Alipay</string>
    <string name="donate_others">Other way</string>
    <string name="donate_choose_title">Choose donate way</string>
    <string name="prompt_alipay_not_found">Alipay not found.</string>
    <string name="donate_confirm">Donate</string>
    <string name="donate_never_show">Don\'t show again</string>
    <string name="app_guide_title">Important tips</string>
    <string name="about_feedback_title">TwoYi feedback</string>
    <string name="feedback_confirm">If you encountered some problems, please read the FAQ first! If you have some feature request, just contact me.</string>
    <string name="feedback_ok">Go to feedback</string>
    <string name="read_faq_text">Read FAQ</string>
    <string name="menu_not_show_system">Don\'t show system apps</string>
    <string name="menu_not_show_added">Don\'t show apps which has been added</string>
    <string name="select_app_button">Import App</string>
    <string name="create_app_no_apps">No apps to add, please give twoyi the necessary permission.</string>
    <string name="create_app_all_apps_added">All apps have been added :)</string>
    <string name="select_app_app_not_found">Can not found the specified package.</string>
    <string name="select_app_tips">Please select app you want to create</string>
    <string name="create_app_activity">Import App</string>
    <string name="check_file_invlid_apk">Can not parse the APK file!</string>
    <string name="check_file_create_self_tip">Boy, your idea is promising :)</string>
    <string name="import_app_from_file">Import app from APK</string>
    <string name="unsupported_for_32bit_app">32 bit app is not supported :(</string>
    <string name="please_install_one_by_one">Please install app one by one!</string>
    <string name="install_success">Install success!</string>
    <string name="install_failed">Install failed: %1$s</string>
    <string name="title_settings">Settings</string>
    <string name="settings_key_about">About</string>
    <string name="settings_key_import_app">Import App</string>
    <string name="settings_import_summary">Import apps from outside system</string>
    <string name="settings_key_donate">Donate</string>
    <string name="settings_donate_summary">Donate to make twoyi better :)</string>
    <string name="install_failed_reason">install failed: %1$s</string>
    <string name="look_it">Read it</string>
    <string name="tips_for_android12">You are running on Android 12, please follow the guide to use twoyi.</string>
    <string name="settings_key_sendlog">Send Log</string>
    <string name="settings_sendlog_summary">Share the exception log to developer</string>
    <string name="sdcard_of_twoyi">sdcard of twoyi</string>
    <string name="confirm_for_android12" >Make sure you\'ve followed the tutorial to set it up!!Otherwise the system may fail to boot!!!</string>
    <string name="i_confirm_it">I confirm it</string>
    <string name="menu_not_show_32bit">Don\'t show 32bit apps</string>
    <string name="settings_key_replace_rom">Replace ROM</string>
    <string name="settings_replace_rom_summary">Boot twoyi with your custom ROM</string>
    <string name="replace_rom_invalid">The ROM is not a valid ROM :(</string>
    <string name="replace_rom_confirm_title">ROM confirm</string>
    <string name="replace_rom_confirm_message">ROM author: %1$s\nROM version: %2$s\nROM desc: %3$s\n\n the ROM will be replaced in next boot.</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_key_factory_reset">Factory Reset</string>
    <string name="settings_factory_reset_summary">Boot twoyi with official internal ROM (data will be kept)</string>
    <string name="settings_key_wipe_all_data">Wipe all data</string>
    <string name="settings_wipe_all_data_summary">All data in twoyi will be wiped</string>
    <string name="factory_reset_confirm_message">Factory reset will reset the ROM in twoyi to initial state, the third party ROM will be replaced, data will be kept, continue?</string>
    <string name="settings_key_manage_files">File Manager</string>
    <string name="settings_export_summary">Import/Export files in twoyi</string>
    <string name="settings_key_shutdown">Shutdown</string>
    <string name="settings_key_reboot">Reboot</string>
    <string name="replace_rom_unofficial_tips">Sorry, please edit the rom info and avoid using official author name :)</string>
    <string name="home_status">Status</string>
    <string name="home_status_running">Container Running</string>
    <string name="home_status_running_detail">The twoyi container is active</string>
    <string name="home_status_stopped">Container Stopped</string>
    <string name="home_status_stopped_detail">Tap Start to boot the container</string>
    <string name="home_container_version">Container Version</string>
    <string name="home_memory_usage">System Memory</string>
    <string name="home_uptime">Uptime</string>
    <string name="home_uptime_format">%dh %dm</string>
    <string name="home_uptime_na">N/A</string>
    <string name="home_quick_actions">Quick Actions</string>
    <string name="home_tools">Tools</string>
    <string name="home_start">Start</string>
    <string name="home_stop">Stop</string>
    <string name="home_reboot">Reboot</string>
    <string name="home_import">Import</string>
    <string name="home_magisk">Magisk</string>
    <string name="home_already_running">Container is already running!</string>
    <string name="home_not_running">Container is not running!</string>
    <string name="home_shutdown_ok">Container stopped</string>
    <string name="home_footer">twoyi-magisk enhanced edition</string>
    <string name="magisk_title">Magisk Manager</string>
    <string name="magisk_status_installed">Magisk is installed</string>
    <string name="magisk_status_not_installed">Magisk not installed</string>
    <string name="magisk_status_container_offline">Container offline</string>
    <string name="magisk_inject_btn">Inject Magisk</string>
    <string name="magisk_injecting">Injecting Magisk…</string>
    <string name="magisk_inject_success">Magisk injected successfully</string>
    <string name="magisk_inject_partial">Magisk overlay created (binaries needed)</string>
    <string name="magisk_inject_failed">Failed to inject Magisk</string>
    <string name="magisk_install_module">Install Module</string>
    <string name="magisk_module_list">Installed Modules</string>
    <string name="magisk_no_modules">No Magisk modules installed\nTap + to install one</string>
    <string name="magisk_installing">Installing module…</string>
    <string name="magisk_install_success">Module installed successfully</string>
    <string name="magisk_install_failed">Failed to install module</string>
    <string name="magisk_no_file_manager">No file manager available</string>
    <string name="magisk_container_required">Container must be running first</string>
    <string name="magisk_unknown">Unknown</string>
    <string name="magisk_refresh">Refresh</string>
    <string name="magisk_module_enabled">Enabled</string>
    <string name="magisk_module_disabled">Disabled</string>
    <string name="magisk_module_enabled_toast">Module enabled</string>
    <string name="magisk_module_disabled_toast">Module disabled</string>
    <string name="magisk_module_remove">Remove module</string>
    <string name="magisk_module_details">View details</string>
    <string name="magisk_module_removed">Module removed</string>
    <string name="magisk_module_status">Status</string>
    <string name="root_access">Root Access</string>
    <string name="root_access_summary">Toggle root access for the container (Magisk will handle root requests)</string>
    <string name="root_access_enabled">Root access enabled</string>
    <string name="root_access_disabled">Root access disabled</string>
    <string name="root_access_error">Failed to toggle root access</string>
    <string name="root_access_container_offline">Container must be running to toggle root</string>
    <string name="magisk_settings">Magisk</string>
    <string name="magisk_settings_summary">Manage Magisk modules in the container</string>
    <string name="importer_title">Package Importer</string>
    <string name="importer_filter_title">Format filter</string>
    <string name="importer_no_files">No files selected</string>
    <string name="importer_files_selected">%d file(s) selected</string>
    <string name="importer_format">Format: %s</string>
    <string name="importer_empty">Select files to import</string>
    <string name="importer_batch_mode">Enable batch installation</string>
    <string name="importer_pick_files">Pick Files</string>
    <string name="importer_install_disabled">Select files</string>
    <string name="importer_install_single">Install Single</string>
    <string name="importer_install_batch">Install All (%d)</string>
    <string name="importer_processing">Processing files…</string>
    <string name="importer_no_apk_found">No APK files found in the selected files</string>
    <string name="importer_invalid_apk">One or more files are invalid APKs</string>
    <string name="importer_error">An error occurred during import</string>
    <string name="importer_bundle_install">Installing files as a bundle</string>
    <string name="importer_pick_error">Could not open file picker</string>
    <string name="rom_import_desc">Select a 7z ROM file to replace the container system</string>
    <string name="rom_import_pick">Select ROM File</string>
    <string name="rom_import_confirm_apply">Apply &amp; Reboot</string>
    <string name="rom_import_no_file">No file selected</string>
    <string name="rom_import_rom_info">ROM Info</string>
    <string name="rom_import_author">Author</string>
    <string name="rom_import_version">Version</string>
    <string name="rom_import_description">Description</string>
    <string name="rom_import_loading">Loading…</string>
</resources>